...

            case .dataLoaded:
                List {
                    ForEach(viewModel.workouts) { workout in
                        Section(workout.formattedNumericDateTimeOmitted) {
                            if viewModel.getRepSets(in: viewModel.exercise, and: workout).isEmpty {
                                Text("No sets found for this workout.")
                            } else {
                                ForEach(workout.repSetsArray) { repSet in
                                    if repSet.exercise == viewModel.exercise {
                                        Text(repSet.formattedDescription)
                                    }
                                }
...
                EmptyView()

            default:
                NoDataFoundView(message: "Invalid ViewState")
            }
        }
        .navigationTitle("All Sets")
        .navigationBarTitleDisplayMode(.inline)
        .alert(
            "Error",
            isPresented: $viewModel.errorAlertIsShowing,
            actions: {
                Button("OK") { }
...
